[gd_scene load_steps=4 format=3 uid="uid://xfdo6xd8dk7e"]

[ext_resource type="Script" path="res://scenes/scripts/level.gd" id="1_naa0k"]
[ext_resource type="PackedScene" uid="uid://sblr3tc0v61g" path="res://scenes/player/player.tscn" id="2_fnpqa"]
[ext_resource type="PackedScene" uid="uid://djnvm3wx7qgr8" path="res://scenes/enemies/drone.tscn" id="4_7x1g1"]

[node name="Level" type="Node2D"]
script = ExtResource("1_naa0k")

[node name="ground" type="Node2D" parent="."]
position = Vector2(1766, 2206)

[node name="Player" parent="." instance=ExtResource("2_fnpqa")]
unique_name_in_owner = true
position = Vector2(1941, 2141)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(1765, 2206)
enabled = false
color = Color(0.847059, 0.631373, 0.411765, 0.894118)
blend_mode = 1

[node name="drone_node" type="Node2D" parent="."]
position = Vector2(0, 34)

[node name="drone_spawn_timer" type="Timer" parent="drone_node"]
wait_time = 2.0

[node name="Drone" parent="drone_node" instance=ExtResource("4_7x1g1")]
position = Vector2(1433, 1043)

[connection signal="granade" from="Player" to="." method="_on_player_granade"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="child_exiting_tree" from="drone_node" to="Player" method="_on_drone_node_child_exiting_tree"]
[connection signal="timeout" from="drone_node/drone_spawn_timer" to="." method="_on_drone_spawn_timer_timeout"]
